--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello this is my website
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body style="background-color: aqua;">
+    <h1>this is my website</h1>
+</body>
+</html>
