--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: aqua;">
+<body style="background-color: green;">
     <h1>this is my website</h1>
 </body>
 </html>
